# Processor

./: .gitignore  README.md  cmd.h  config.h  run.cpp
assembler/: Assembler  CMakeLists.txt  assembler.cpp  assembler.h  fibbonachi.txt  fuck.txt  main.cpp  mmm.cpp  output.txt  quadr.txt  tests.txt
cpu/: CMakeLists.txt  Cpu  cpu.cpp  cpu.h  main.cpp  mmm.cpp
disassembler/: CMakeLists.txt  Disasm  code.txt  disassembler.cpp  disassembler.h  human.txt  main.cpp
examples/: fibbonachi.txt  line.txt  quadr.txt  tests.txt  videomem.txt
